--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Real Protection OTP & WooCommerce SMS Alert
+logo: /image/rp_logo.png
+description: Secure your login and get alert on woocommerce purchase 
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
