--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: /image/rp_logo.png
 description: Secure your login and get alert on woocommerce purchase 
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
