--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: Real Protection
 logo: /image/rp_logo.png
 description: Secure your login and get alert on woocommerce purchase 
 show_downloads: true
